k3s-userapps/larapaper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: larapaper
  namespace: larapaper
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: larapaper
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: larapaper
    spec:
      volumes:
        - name: larapaper
          persistentVolumeClaim:
            claimName: larapaper
      containers:
        - image: 'ghcr.io/usetrmnl/larapaper:0.34.1'
          name: larapaper
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /var/www/html/database/storage
              name: larapaper
              subPath: database
            - mountPath: /var/www/html/storage/app/public/images/generated
              name: larapaper
              subPath: generated
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 15
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
