k3s-userapps/larapaper/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: larapaper
  namespace: larapaper
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/pod: larapaper
  type: ClusterIP
